Fixes bug in last form on mobile, adds responsive img

--- a/style.css
+++ b/style.css
@@ -256,6 +256,7 @@ h2,
 	vertical-align: middle;
 	width: 231px;
 	line-height: 34px;
+	max-width: 100%;
 }
 /* =Sections */
 /* =Header */
